--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.15.0
   firebase_crashlytics: ^3.3.4
   carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,8 @@ flutter:
     - assets/icons/home.png
     - assets/icons/settings.png
     - assets/icons/plus.png
+    - assets/icons/arrow_left.png
+    - assets/icons/arrow_right.png
     - assets/small_icons/sound.png
     - assets/small_icons/theme.png
     - assets/small_icons/language.png
