--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_crashlytics: ^3.3.4
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
+  go_router: ^10.0.0
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +72,7 @@ flutter:
     - assets/icons/plus.png
     - assets/icons/arrow_left.png
     - assets/icons/arrow_right.png
+    - assets/icons/shop.png
     - assets/small_icons/sound.png
     - assets/small_icons/theme.png
     - assets/small_icons/language.png
