--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   go_router: ^10.0.0
   url_launcher: ^6.1.12
+  flutter_riverpod: ^2.3.6
 
 dev_dependencies:
   flutter_test:
