--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   url_launcher: ^6.1.12
   flutter_riverpod: ^2.3.6
   flame: ^1.8.1
+  flame_audio: ^2.0.4
 
 dev_dependencies:
   flutter_test:
