--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_riverpod: ^2.3.6
   flame: ^1.8.1
   flame_audio: ^2.0.4
+  shared_preferences: ^2.2.0
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
